--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://enally.in/images/new/logoenally.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <!-- Material Icon Css -->
-     <link rel="stylesheet" href="https://enally.in/css/materialdesignicons.min.css" type="text/css" />
-     <!-- Unicon Css -->
-     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-     <!-- Fontawesome -->
-     <link href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" />
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="https://enally.in/images/new/logoenally.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
-    <title>Dashboard - Board.</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Dashboard built using React.js with basic authentication using Google for user login and signup. Designed to be responsive." />
+  <meta name="keywords" content="dashboard, React.js, authentication, Google, responsive" />
+  <meta name="author" content="Prashant Kumar" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#000000" />
+
+  <link rel="icon" href="https://enally.in/images/new/logoenally.png" />
+  <link rel="apple-touch-icon" href="https://enally.in/images/new/logoenally.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!-- Material Icon Css -->
+  <link rel="stylesheet" href="https://enally.in/css/materialdesignicons.min.css" />
+  <!-- Unicon Css -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+  <!-- Fontawesome -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <title>Dashboard - Board</title>
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 </html>
